DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Jul-08-2007 patrick     Code in the Draw Manager implementations is now in a
                        namespace specific to each implementation, and the
                        classes contained therein no longer have the Draw
                        Manager abbreviation at the start of their name. The
                        namespaces are vrj::opengl (vrj/Draw/OpenGL), vrj::osg
                        (vrj/Draw/OSG), vrj::opensg (vrj/Draw/OpenSG), vrj::pf
                        (vrj/Draw/Pf), and vrj::direct3d (vrj/Draw/Performer).
                        NEW VERSION: 2.3.11
Jul-08-2007 patrick     Debug-enabled code linked against the release runtime
                        on Windows is now named the same as optimized code.
                        The debug DLLs are installed in the "debug"
                        subdirectory. On non-Windows platforms, debug-enabled
                        plug-ins no longer use the "_d" name variation and are
                        installed in the "debug" subdirectory.
                        NEW VERSION: 2.3.10
Jun-26-2007 patrick     Changed the preprocessor identification of debug versus
                        optimized to look for VJ_DEBUG or JUGGLER_DEBUG
                        instead of _DEBUG (and VJ_OPT or JUGGLER_OPT instead
                        of _OPT).
                        NEW VERSION: 2.3.9
May-14-2007 patrick     Finished making vrj::OpenSGApp work with both OpenSG
                        1.x and 2.0.
                        NEW VERSION: 2.3.8
May-11-2007 patrick     Made the data member of vrj::Frustum private and added
                        vrj::Frustum::getValues() as the accessor for that
                        data.
                        NEW VERSION: 2.3.7
May-06-2007 patrick     Exposed VRJBasicDelegate so that user-level code can