@@ -1,3 +1,4 @@
+2.3.12-0 @08/25/2007 13:15:00 UTC@
 2.3.11-0 @07/08/2007 21:25:00 UTC@
 2.3.10-0 @07/08/2007 21:15:00 UTC@
 2.3.9-0 @06/26/2007 23:10:00 UTC@
